###################################################################################################
#####                                                                                         #####
#####                     LiteFX.Tests - Contains tests for the project.                      #####
#####                                                                                         #####
###################################################################################################

INCLUDE(TestHelpers.cmake)

# Include individual tests.
ADD_SUBDIRECTORY(Core.Enumerable)